--- a/package.json
+++ b/package.json
@@ -1,21 +1,35 @@
 {
-  "name": "plvylist",
-  "version": "1.0.2",
-  "description": "A web component for playing an album or multiple tracks in your site or app.",
-  "main": "plvylist-component.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/troyvassalotti/plvylist.git"
-  },
-  "keywords": [
-    "web component",
-    "music",
-    "audio"
-  ],
-  "author": "Troy Vassalotti",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/troyvassalotti/plvylist/issues"
-  },
-  "homepage": "https://github.com/troyvassalotti/plvylist#readme"
+    "type": "module",
+    "name": "plvylist",
+    "version": "1.0.2",
+    "description": "A web component for playing an album or multiple tracks in your site or app.",
+    "main": "plvylist-component.js",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/troyvassalotti/plvylist.git"
+    },
+    "keywords": [
+        "web component",
+        "music",
+        "audio"
+    ],
+    "scripts": {
+        "serve": "http-server",
+        "build": "gulp"
+    },
+    "author": "Troy Vassalotti",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/troyvassalotti/plvylist/issues"
+    },
+    "homepage": "https://github.com/troyvassalotti/plvylist#readme",
+    "devDependencies": {
+        "http-server": "^14.1.0",
+        "prettier": "^2.5.1"
+    },
+    "dependencies": {
+        "gulp": "^4.0.2",
+        "gulp-rename": "^2.0.0",
+        "gulp-terser": "^2.1.0"
+    }
 }
