--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
     "homepage": "https://github.com/troyvassalotti/plvylist#readme",
     "devDependencies": {
         "http-server": "^14.1.0",
-        "prettier": "^2.5.1"
-    },
-    "dependencies": {
+        "prettier": "^2.5.1",
         "gulp": "^4.0.2",
         "gulp-rename": "^2.0.0",
         "gulp-terser": "^2.1.0"
