--- a/package.json
+++ b/package.json
@@ -1,33 +1,38 @@
 {
-    "type": "module",
-    "name": "plvylist",
-    "version": "1.1.3",
-    "description": "A web component for playing an album or multiple tracks in your site or app.",
-    "main": "plvylist-component.js",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/troyvassalotti/plvylist.git"
-    },
-    "keywords": [
-        "web component",
-        "music",
-        "audio"
-    ],
-    "scripts": {
-        "serve": "http-server",
-        "build": "gulp"
-    },
-    "author": "Troy Vassalotti",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/troyvassalotti/plvylist/issues"
-    },
-    "homepage": "https://github.com/troyvassalotti/plvylist#readme",
-    "devDependencies": {
-        "http-server": "^14.1.0",
-        "prettier": "^2.5.1",
-        "gulp": "^4.0.2",
-        "gulp-rename": "^2.0.0",
-        "gulp-terser": "^2.1.0"
-    }
+  "type": "module",
+  "name": "plvylist",
+  "version": "1.1.3",
+  "description": "A web component for playing an album or multiple tracks in your site or app.",
+  "main": "plvylist-player.js",
+  "files": [
+    "plvylist-player.js",
+    "plvylist-player.min.js"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/troyvassalotti/plvylist.git"
+  },
+  "keywords": [
+    "web component",
+    "music",
+    "audio"
+  ],
+  "scripts": {
+    "serve": "http-server",
+    "build": "gulp",
+    "format": "prettier --write ."
+  },
+  "author": "Troy Vassalotti",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/troyvassalotti/plvylist/issues"
+  },
+  "homepage": "https://github.com/troyvassalotti/plvylist#readme",
+  "devDependencies": {
+    "http-server": "^14.1.0",
+    "prettier": "^2.5.1",
+    "gulp": "^4.0.2",
+    "gulp-rename": "^2.0.0",
+    "gulp-terser": "^2.1.0"
+  }
 }
