--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "name": "plvylist",
   "version": "2.0.0",
   "description": "A web component for playing an album or multiple tracks in your site or app.",
-  "main": "plvylist-player.js",
+  "main": "dist/plvylist.es.js",
+  "exports": {
+    ".": "./dist/plvylist.es.js"
+  },
   "files": [
-    "plvylist-player.js",
-    "plvylist-player.min.js"
+    "dist/plvylist.es.js"
   ],
   "repository": {
     "type": "git",
@@ -18,9 +20,10 @@
     "audio"
   ],
   "scripts": {
-    "serve": "http-server",
-    "build": "gulp",
-    "format": "prettier --write ."
+    "dev": "vite",
+    "build": "npm run prettier::format && vite build",
+    "prettier::lint": "prettier --check .",
+    "prettier::format": "prettier --write ."
   },
   "author": "Troy Vassalotti",
   "license": "MIT",
@@ -29,10 +32,7 @@
   },
   "homepage": "https://github.com/troyvassalotti/plvylist#readme",
   "devDependencies": {
-    "http-server": "^14.1.0",
     "prettier": "^2.5.1",
-    "gulp": "^4.0.2",
-    "gulp-rename": "^2.0.0",
-    "gulp-terser": "^2.1.0"
+    "vite": "^2.9.5"
   }
 }
