--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/troyvassalotti/plvylist.git"
+    "url": "https://github.com/troyvassalotti/plvylist.git"
   },
   "keywords": [
     "web component",
