--- a/package.json
+++ b/package.json
@@ -44,5 +44,6 @@
     "vite": "^4.0.4",
     "vite-plugin-cem": "^0.4.0"
   },
+  "customElements": "dist/custom-elements.json",
   "web-types": "dist/web-types.json"
 }
