--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "audio"
   ],
   "scripts": {
-    "start": "vite",
-    "vite::build": "vite build",
-    "vite::docs": "vite build --mode docs",
-    "preview::docs": "vite --mode docs",
-    "prebuild": "prettier::format",
-    "build": "vite::build",
-    "prettier::lint": "prettier --check .",
-    "prettier::format": "prettier --write ."
+    "start": "npx vite",
+    "vite::build": "npx vite build",
+    "vite::docs": "npx vite build --mode docs",
+    "preview::docs": "npx vite --mode docs",
+    "prebuild": "npm run prettier::format",
+    "build": "npm run vite::build",
+    "prettier::lint": "npx prettier --check .",
+    "prettier::format": "npx prettier --write ."
   },
   "author": "Troy Vassalotti (https://www.troyv.dev/)",
   "license": "MIT",
@@ -40,10 +40,16 @@
     "lit": "^3.1.4"
   },
   "devDependencies": {
-    "api-viewer-element": "^1.0.0-pre.7",
+    "cem-plugin-async-function": "^0.0.5",
+    "cem-plugin-jsdoc-example": "^0.0.9",
     "common-tags": "^1.8.2",
+    "custom-element-jet-brains-integration": "^1.5.0",
+    "custom-element-vs-code-integration": "^1.3.0",
+    "markdown-it": "^14.1.0",
     "prettier": "^2.5.1",
-    "vite": "^4.0.4"
+    "vite": "^4.0.4",
+    "vite-plugin-cem": "^0.8.0",
+    "vite-plugin-nunjucks": "^0.2.0"
   },
   "customElements": "dist/custom-elements.json",
   "web-types": "dist/web-types.json"
