--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "preview::docs": "npx vite --mode docs",
     "prebuild": "npm run prettier::format",
     "build": "npm run vite::build",
+    "deploy": "netlify deploy --prod",
     "prettier::lint": "npx prettier --check .",
     "prettier::format": "npx prettier --write ."
   },
@@ -36,8 +37,8 @@
   },
   "homepage": "https://github.com/troyvassalotti/plvylist#readme",
   "dependencies": {
-    "@lit/task": "^1.0.2",
-    "lit": "^3.2.1"
+    "@lit/task": "^1.0.3",
+    "lit": "^3.3.1"
   },
   "devDependencies": {
     "cem-plugin-async-function": "^0.0.5",
@@ -46,9 +47,9 @@
     "custom-element-jet-brains-integration": "^1.7.0",
     "custom-element-vs-code-integration": "^1.5.0",
     "markdown-it": "^14.1.0",
-    "prettier": "^3.4.2",
-    "vite": "^6.0.11",
-    "vite-plugin-cem": "^0.8.2",
+    "prettier": "^3.6.2",
+    "vite": "^7.1.3",
+    "vite-plugin-cem": "^0.8.4",
     "vite-plugin-nunjucks": "^0.2.0"
   },
   "customElements": "dist/custom-elements.json",
